--- a/src/csv-generator/package.json
+++ b/src/csv-generator/package.json
@@ -3,8 +3,13 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "dev": "node index.js"
+  },
   "dependencies": {
-    "csv-writer": "^1.6.0",
-    "faker": "^4.1.0"
+    "csv-writer": "^1.6.0"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^9.0.0"
   }
 }
